--- a/src/components/docs/pageContent.astro
+++ b/src/components/docs/pageContent.astro
@@ -1,6 +1,6 @@
 ---
 import type { MarkdownHeading } from "astro";
-import type { Frontmatter,KnownLanguageCode } from "../../config";
+import type { Frontmatter, KnownLanguageCode } from "../../config";
 import { getIsRtlFromLangCode } from "../../languages";
 import OnThisPageLinks from "../navigation/OnThisPageLinks";
 import BreadCrumbs from "./breadCrumbs";
@@ -21,7 +21,7 @@ const isRtl = getIsRtlFromLangCode((lang || "en") as KnownLanguageCode);
 
 <article id="article" class="flex w-full max-w-screen-lg flex-col">
   {lang && lang !== "en"}
-  <div class="h-10 mb-2">
+  <div class="mb-2 h-10">
     <BreadCrumbs client:only />
   </div>
   <OnThisPageLinks
@@ -53,7 +53,7 @@ const isRtl = getIsRtlFromLangCode((lang || "en") as KnownLanguageCode);
   const copySVG = `<svg width="1.3em" height="1.3em" viewBox="0 0 256 256"><path fill="currentColor" d="M216 36H88a4 4 0 0 0-4 4v44H40a4 4 0 0 0-4 4v128a4 4 0 0 0 4 4h128a4 4 0 0 0 4-4v-44h44a4 4 0 0 0 4-4V40a4 4 0 0 0-4-4Zm-52 176H44V92h120Zm48-48h-40V88a4 4 0 0 0-4-4H92V44h120Z"/></svg>`;
 
   let titles = document.querySelectorAll(
-    ".remark-code-title",
+    ".remark-code-title"
   ) as NodeListOf<HTMLDivElement>;
   titles.forEach((title) => {
     title.dir = "ltr";
@@ -144,7 +144,7 @@ const isRtl = getIsRtlFromLangCode((lang || "en") as KnownLanguageCode);
         {
           duration: 300,
           easing: "ease-in-out",
-        },
+        }
       );
 
       props.animation.onfinish = () => onAnimationFinish(false);
@@ -181,7 +181,7 @@ const isRtl = getIsRtlFromLangCode((lang || "en") as KnownLanguageCode);
         {
           duration: 300,
           easing: "ease-in-out",
-        },
+        }
       );
 
       props.animation.onfinish = () => onAnimationFinish(true);
