--- a/src/components/landingPage/activityText.astro
+++ b/src/components/landingPage/activityText.astro
@@ -1,43 +1,58 @@
 ---
-
 ---
+
 <div class="flex justify-center">
-    <div class="mb-16 gap-8 flex-col mx-8 max-w-7xl">
-        <div class="flex-col max-w-4xl">
-            <h1 class="text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400 mb-4 text-center">
-                Our activities
-            </h1>
-            <h2 class="text-2xl font-bold text-stone-700 dark:text-stone-100 mb-2">
-                Workshops
-            </h2>
-            <p>
-                We're not only able to show what a robot can do, it is also possible to show you how to program them. Depending on age and experience we can give different workshops. Walk the robot where you want, say what you want and make new dances to perform.
-            </p>
+  <div class="mx-8 mb-16 max-w-7xl flex-col gap-8">
+    <div class="max-w-4xl flex-col">
+      <h1
+        class="mb-4 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      >
+        Our activities
+      </h1>
+      <h2 class="mb-2 text-2xl font-bold text-stone-700 dark:text-stone-100">
+        Workshops
+      </h2>
+      <p>
+        We're not only able to show what a robot can do, it is also possible to
+        show you how to program them. Depending on age and experience we can
+        give different workshops. Walk the robot where you want, say what you
+        want and make new dances to perform.
+      </p>
 
-            <div class="pb-8"></div>
+      <div class="pb-8"></div>
 
-            <h2 class="text-2xl font-bold text-stone-700 dark:text-stone-100 mb-2">
-                Lectures
-            </h2>
-            <p>
-                Do you want to know which techniques we use to make our robots autonomously play football, what's relevant in the current frontier of artificial intelligence and robotics or maybe even hear how robots will change the future? We gladly give a lectures on location or in our own lab.
-            </p>
-    
-            <div class="pb-8"></div>
+      <h2 class="mb-2 text-2xl font-bold text-stone-700 dark:text-stone-100">
+        Lectures
+      </h2>
+      <p>
+        Do you want to know which techniques we use to make our robots
+        autonomously play football, what's relevant in the current frontier of
+        artificial intelligence and robotics or maybe even hear how robots will
+        change the future? We gladly give a lectures on location or in our own
+        lab.
+      </p>
 
-            <h2 class="text-2xl font-bold text-stone-700 dark:text-stone-100 mb-2">
-                Competition
-            </h2>
-            <p>
-                Of course, we also compete in the RoboCup SPL and other competitions yearly! Our robots are put to the test by playing games against teams from around the world.
-            </p>
+      <div class="pb-8"></div>
 
-            <div class="pb-20"></div>
+      <h2 class="mb-2 text-2xl font-bold text-stone-700 dark:text-stone-100">
+        Competition
+      </h2>
+      <p>
+        Of course, we also compete in the RoboCup SPL and other competitions
+        yearly! Our robots are put to the test by playing games against teams
+        from around the world.
+      </p>
 
-            <p class="text-center text-dnt-orange-700 dark:text-dnt-orange-300">
-                Want to join the crew, sponsor us, or have any other questions? Send us an email at <a href="mailto:info@dutchnaoteam.nl" class="text-black dark:text-white underline hover:text-dnt-orange-400 hover:decoration-wavy">info@dutchnaoteam.nl</a>
-            </p>
-        </div>
+      <div class="pb-20"></div>
+
+      <p class="text-center text-dnt-orange-700 dark:text-dnt-orange-300">
+        Want to join the crew, sponsor us, or have any other questions? Send us
+        an email at <a
+          href="mailto:info@dutchnaoteam.nl"
+          class="text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white"
+          >info@dutchnaoteam.nl</a
+        >
+      </p>
     </div>
+  </div>
 </div>
-
