--- a/src/components/navigation/moreMenu.astro
+++ b/src/components/navigation/moreMenu.astro
@@ -54,7 +54,7 @@ const isLangEN = getLanguageFromURL(pathname) === "en";
     <li
       class={clsx(
         "hidden text-dnt-orange-800 hover:text-dnt-orange-400 dark:text-dnt-orange-200 dark:hover:text-dnt-orange-100",
-        !isLangEN && "md:block",
+        !isLangEN && "md:block"
       )}
     >
       <a
