--- a/src/components/navigation/sidebarToggle.astro
+++ b/src/components/navigation/sidebarToggle.astro
@@ -2,14 +2,13 @@
 export interface Props {
   isLanding: boolean;
 }
-
 ---
 
 <button
   id="sidebar-toggle"
   type="button"
   aria-pressed="false"
-  class="z-20 block md:hidden text-black dark:text-white"
+  class="z-20 block text-black dark:text-white md:hidden"
 >
   <svg
     xmlns="http://www.w3.org/2000/svg"
