--- a/src/components/landingPage/navButton.astro
+++ b/src/components/landingPage/navButton.astro
@@ -9,9 +9,9 @@ const { title, body, href } = Astro.props;
 ---
 
 <a
-  class="px-6 py-4 rounded-md bg-dnt-orange-500 dark:bg-dnt-orange-400 text-dnt-orange-50 dark:text-dnt-orange-900 hover:decoration-dotted"
+  class="rounded-md bg-dnt-orange-500 px-6 py-4 text-dnt-orange-50 hover:decoration-dotted dark:bg-dnt-orange-400 dark:text-dnt-orange-900"
   href={href}
 >
-	<h1 class="font-bold text-2xl">{title}</h1>
+  <h1 class="text-2xl font-bold">{title}</h1>
   <h2 class="p-0">{body}</h2>
 </a>
