--- a/src/components/landingPage/navButtons.astro
+++ b/src/components/landingPage/navButtons.astro
@@ -1,12 +1,23 @@
 ---
 import NavButton from "./navButton.astro";
 ---
-<div class="flex justify-center">
-    <div class="flex flex-col flex-auto mb-16 gap-8 mx-8 max-w-3xl w-full lg:flex-row">
-        <NavButton title="Publications" body="Find out about our publications here!" href="/publications"/>
-        <NavButton title="Documentation" body="Find out about our framework here!" href="/en/introduction"/>
 
-        <!-- <div class="flex-col align-begin">
+<div class="flex justify-center">
+  <div
+    class="mx-8 mb-16 flex w-full max-w-3xl flex-auto flex-col gap-8 lg:flex-row"
+  >
+    <NavButton
+      title="Publications"
+      body="Find out about our publications here!"
+      href="/publications"
+    />
+    <NavButton
+      title="Documentation"
+      body="Find out about our framework here!"
+      href="/en/introduction"
+    />
+
+    <!-- <div class="flex-col align-begin">
             <h1 class="text-3xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400 mb-2">
                 
             </h1>
@@ -14,6 +25,5 @@ import NavButton from "./navButton.astro";
                 
             </p>
         </div> -->
-    </div>
+  </div>
 </div>
-
