--- a/src/components/navigation/tableOfContents.astro
+++ b/src/components/navigation/tableOfContents.astro
@@ -10,7 +10,7 @@ export interface Props {
 
 let { headings, title } = Astro.props;
 headings = [{ depth: 2, slug: "overview", text: title }, ...headings].filter(
-  ({ depth }) => depth > 1 && depth < 4,
+  ({ depth }) => depth > 1 && depth < 4
 );
 
 const { pathname } = Astro.url;
@@ -57,7 +57,7 @@ const isRtl = getIsRtlFromUrl(pathname);
               "w-full list-none  rounded-r-lg border-dnt-orange-300/20 p-1 text-sm transition-colors duration-300 hover:border-dnt-orange-300/50",
               isRtl
                 ? ["border-r-2", depth === 2 ? "pr-2" : "pr-4"]
-                : ["border-l-2", depth === 2 ? "pl-2" : "pl-4"],
+                : ["border-l-2", depth === 2 ? "pl-2" : "pl-4"]
             )}
           >
             <a
@@ -82,7 +82,7 @@ const isRtl = getIsRtlFromUrl(pathname);
           const id = entry.target.id;
           // have to do "All" here cause we render this component in pageContent for mobile too
           const tocItem = Array.from(
-            document.querySelectorAll(`a[href="#${id}"]`),
+            document.querySelectorAll(`a[href="#${id}"]`)
           ).at(-1);
           // this occurs when the id = "toc-heading"
           if (!tocItem) return;
@@ -91,15 +91,15 @@ const isRtl = getIsRtlFromUrl(pathname);
             // get current all active elements
             const currentActiveElements = Array.from(
               document.querySelectorAll(
-                `[data-current-active-tab-content-item="true"]`,
-              ),
+                `[data-current-active-tab-content-item="true"]`
+              )
             );
 
             // get current all parent active elements
             const currentActiveParentElements = Array.from(
               document.querySelectorAll(
-                `[data-current-active-parent-tab-content-item="true"]`,
-              ),
+                `[data-current-active-parent-tab-content-item="true"]`
+              )
             );
 
             // if has active elements
@@ -110,7 +110,7 @@ const isRtl = getIsRtlFromUrl(pathname);
                   "font-medium",
                   "bg-dnt-orange-300/20",
                   "text-dnt-orange-700",
-                  "dark:text-dnt-orange-100",
+                  "dark:text-dnt-orange-100"
                 );
                 el.removeAttribute("data-current-active-tab-content-item");
               }
@@ -122,10 +122,10 @@ const isRtl = getIsRtlFromUrl(pathname);
                 parentEl.classList.remove(
                   "dark:bg-dnt-orange-300/20",
                   "bg-dnt-orange-300/30",
-                  "border-dnt-orange-300/100",
+                  "border-dnt-orange-300/100"
                 );
                 parentEl.removeAttribute(
-                  "data-current-active-parent-tab-content-item",
+                  "data-current-active-parent-tab-content-item"
                 );
               }
             }
@@ -133,18 +133,18 @@ const isRtl = getIsRtlFromUrl(pathname);
             tocItem.classList.add(
               "font-medium",
               "text-dnt-orange-700",
-              "dark:text-dnt-orange-100",
+              "dark:text-dnt-orange-100"
             );
             tocItem.parentElement.classList.add(
               "border-dnt-orange-300/100",
               "dark:bg-dnt-orange-300/20",
-              "bg-dnt-orange-300/30",
+              "bg-dnt-orange-300/30"
             );
             // set data attr to active element also will helpful when need to remove active state
             tocItem.setAttribute("data-current-active-tab-content-item", true);
             tocItem.parentElement.setAttribute(
               "data-current-active-parent-tab-content-item",
-              true,
+              true
             );
           }
         });
@@ -152,7 +152,7 @@ const isRtl = getIsRtlFromUrl(pathname);
       {
         rootMargin: "-100px 0% -66%",
         threshold: 1,
-      },
+      }
     ).observe(h);
   });
 </script>
