--- a/src/components/publications/publicationCard.astro
+++ b/src/components/publications/publicationCard.astro
@@ -1,5 +1,5 @@
 ---
-import type { IPublication } from './publication';
+import type { IPublication } from "./publication";
 
 export interface Props {
   year: string;
@@ -11,10 +11,18 @@ const { publication } = Astro.props;
 
 <div class="text-dnt-orange-500 dark:text-dnt-orange-300">
   <div class="flex flex-col">
-    <a href={`${publication.file}`} download class="text-xl font-semibold hover:decoration-dotted dark:hover:text-dnt-orange-400 hover:text-dnt-orange-700 ">
+    <a
+      href={`${publication.file}`}
+      download
+      class="text-xl font-semibold hover:text-dnt-orange-700 hover:decoration-dotted dark:hover:text-dnt-orange-400"
+    >
       {publication.title}
     </a>
-    <p class="text-dnt-orange-700 dark:text-dnt-orange-200 text-s mb-3">{publication.authors.join(", ")}</p>
-    <p class="text-dnt-orange-900 dark:text-dnt-orange-100 text-md">Tags: {publication.tags.join(", ")}</p>
+    <p class="text-s mb-3 text-dnt-orange-700 dark:text-dnt-orange-200">
+      {publication.authors.join(", ")}
+    </p>
+    <p class="text-md text-dnt-orange-900 dark:text-dnt-orange-100">
+      Tags: {publication.tags.join(", ")}
+    </p>
   </div>
 </div>
