--- a/src/layouts/docs.astro
+++ b/src/layouts/docs.astro
@@ -25,7 +25,6 @@ const currentFile = `src/pages${currentPage.replace(/\/$/, "")}.${
 
 // const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 const githubEditUrl = "";
-
 ---
 
 <html
@@ -71,7 +70,7 @@ const githubEditUrl = "";
     <div
       class="sticky top-0 z-40 max-h-full w-full bg-default transition-colors duration-300"
     >
-  <Navbar />
+      <Navbar />
     </div>
     <main
       class="grid w-full max-w-7xl flex-1 grid-cols-1 gap-4 md:grid-cols-[250px_auto] lg:grid-cols-[250px_auto_250px]"
@@ -97,7 +96,6 @@ const githubEditUrl = "";
         </nav> -->
         <!-- <Footer path={currentFile} isBlog={true} /> -->
         <div class="py-32"></div>
-
       </div>
       <div class="md:[margin-inline-end:16px]">
         <aside
@@ -124,7 +122,7 @@ const githubEditUrl = "";
             () => {
               navigator.clipboard.writeText(href);
             },
-            false,
+            false
           );
         });
       }
