--- a/src/components/landingPage/footer.astro
+++ b/src/components/landingPage/footer.astro
@@ -2,13 +2,18 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<div class="flex justify-center py-8 px-8">
+<div class="flex justify-center px-8 py-8">
   <h1 class="text-stone-400 dark:text-stone-500">
     Made with love, robots <span
       class="hover:cursor-pointer"
       id="dont-click-this-secret-button">🤖</span
     > and Dr. Pepper - Dutch Nao Team {currentYear}
   </h1>
+  <a
+    href="/en/foundation/anbi"
+    class="px-8 text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white"
+    >Anbi</a
+  >
 </div>
 
 <script>
