--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -174,16 +174,16 @@
     @apply flex w-full flex-col items-start justify-start px-4 leading-relaxed text-slate-900 selection:bg-dnt-orange-200 selection:text-dnt-orange-500 dark:text-dnt-orange-100 dark:selection:bg-dnt-orange-100 dark:selection:text-slate-900;
   }
   .markdown h1 {
-    @apply mt-8 mb-4 text-3xl font-extrabold;
+    @apply mb-4 mt-8 text-3xl font-extrabold;
   }
   .markdown h2 {
-    @apply mt-8 mb-4 text-2xl font-semibold;
+    @apply mb-4 mt-8 text-2xl font-semibold;
   }
   .markdown h3 {
-    @apply mt-4 mb-2 text-xl font-semibold;
+    @apply mb-2 mt-4 text-xl font-semibold;
   }
   .markdown h4 {
-    @apply mt-2 mb-1 text-base font-medium;
+    @apply mb-1 mt-2 text-base font-medium;
   }
   .markdown li {
     @apply list-disc text-slate-900 dark:text-white;
@@ -204,9 +204,9 @@
           dark:decoration-dnt-orange-200 dark:hover:text-dnt-orange-300;
   }
 
-  :is([dir='rtl']) .markdown a[rel~="noreferrer"] > span {
-    @apply -scale-x-100 inline-flex;
-}
+  :is([dir="rtl"]) .markdown a[rel~="noreferrer"] > span {
+    @apply inline-flex -scale-x-100;
+  }
 
   .markdown code {
     @apply break-words [direction:ltr] [unicode-bidi:embed] lg:break-normal;
@@ -222,7 +222,7 @@
   }
 
   .markdown pre {
-    @apply mx-auto mb-3 rounded border border-dnt-orange-300/80 p-2 pl-3 font-mono shadow-xl sm:pt-2 bg-default;
+    @apply mx-auto mb-3 rounded border border-dnt-orange-300/80 bg-default p-2 pl-3 font-mono shadow-xl sm:pt-2;
   }
 
   .markdown ol {
@@ -252,7 +252,9 @@
     overflow-wrap: anywhere;
   }
   .markdown table {
-    @apply max-w-full table-fixed;
+    /* @apply max-w-full table-fixed; */
+    width: 100%;
+    text-align: left;
   }
   .markdown table > tbody > tr > td {
     @apply align-top;
@@ -273,6 +275,6 @@
   }
 
   .embed iframe {
-    @apply absolute top-0 left-0 h-full w-full;
+    @apply absolute left-0 top-0 h-full w-full;
   }
 }
