--- a/src/components/publications/publicationCard.astro
+++ b/src/components/publications/publicationCard.astro
@@ -27,6 +27,6 @@ const bibtex = to_bibtex(publication);
       Tags: {publication.tags.join(", ")}
     </p>
     <div class="py-1"></div>
-    <BibButton client:load text={"BibTeX"} bibtex={bibtex} />
+    <BibButton client:load text="BibTeX" bibtex={bibtex} />
   </div>
 </div>
