--- a/src/components/landingPage/footer.astro
+++ b/src/components/landingPage/footer.astro
@@ -9,10 +9,10 @@ const currentYear = new Date().getFullYear();
       id="dont-click-this-secret-button">🤖</span
     > and Dr. Pepper - Dutch Nao Team {currentYear}
   </h1>
+  <!-- class="px-8 text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white" -->
   <a
     href="/en/foundation/anbi"
-    class="px-8 text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white"
-    >Anbi</a
+    class="px-4 text-stone-400 underline dark:text-stone-500">ANBI</a
   >
 </div>
 
