Added bigger "Foundation" button as I think it isn't clear enough in the footer.

--- a/src/components/landingPage/navButtons.astro
+++ b/src/components/landingPage/navButtons.astro
@@ -4,7 +4,7 @@ import NavButton from "./navButton.astro";
 
 <div class="flex justify-center">
   <div
-    class="mx-8 mb-16 flex w-full max-w-3xl flex-auto flex-col gap-8 lg:flex-row"
+    class="mx-8 mb-16 flex w-full max-w-4xl flex-auto flex-col gap-8 lg:flex-row"
   >
     <NavButton
       title="Publications"
@@ -15,6 +15,11 @@ import NavButton from "./navButton.astro";
       title="Documentation"
       body="Find out about our framework here!"
       href="/en/introduction"
+    />
+    <NavButton
+      title="Foundation"
+      body="Find out about our ANBI foundation!"
+      href="/en/foundation/anbi"
     />
 
     <!-- <div class="flex-col align-begin">
