Make footer anbi link more aparant.

--- a/src/components/landingPage/footer.astro
+++ b/src/components/landingPage/footer.astro
@@ -12,7 +12,10 @@ const currentYear = new Date().getFullYear();
   <!-- class="px-8 text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white" -->
   <a
     href="/en/foundation/anbi"
-    class="px-4 text-stone-400 underline dark:text-stone-500">ANBI</a
+    class="px-4 font-bold text-dnt-orange-500 underline hover:decoration-wavy dark:text-dnt-orange-500"
+  >
+    <!-- text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white -->
+    ANBI</a
   >
 </div>
 
