Rewrite landing page

--- a/src/components/landingPage/activityText.astro
+++ b/src/components/landingPage/activityText.astro
@@ -13,10 +13,10 @@
         Workshops
       </h2>
       <p>
-        We're not only able to show what a robot can do, it is also possible to
-        show you how to program them. Depending on age and experience we can
-        give different workshops. Walk the robot where you want, say what you
-        want and make new dances to perform.
+        We're not only able to show what a robot can do, we also offer the possibility
+        to show you how to program them. Depending on age and experience we offer
+        different workshops, tailored to every level and with room for specific educational purposes. 
+        Make the robot move, dance and observe its surroundings!
       </p>
 
       <div class="pb-8"></div>
@@ -25,11 +25,10 @@
         Lectures
       </h2>
       <p>
-        Do you want to know which techniques we use to make our robots
-        autonomously play football, what's relevant in the current frontier of
-        artificial intelligence and robotics or maybe even hear how robots will
-        change the future? We gladly give a lectures on location or in our own
-        lab.
+        Are you interested in our techniques applied to perform autonomous football,
+        the relevancy of our work and the current landscape of AI and robotics? 
+        Or maybe you are curious about what could be next at the cutting edge of our field?
+        We are happy to give lectures and presentations, both on location and inside our Intelligent Robotics Lab.
       </p>
 
       <div class="pb-8"></div>
@@ -38,9 +37,10 @@
         Competition
       </h2>
       <p>
-        Of course, we also compete in the RoboCup SPL and other competitions
-        yearly! Our robots are put to the test by playing games against teams
-        from around the world.
+        Of course there is no football without a little competition, which is why
+        we also compete in the yearly RoboCup SPL (Standard Platform League) and 
+        regional competitions throughout Europe. Our robots are put to the test by 
+        playing matches against teams from all over the world.
       </p>
 
       <div class="pb-20"></div>
