--- a/src/components/landingPage/activityText.astro
+++ b/src/components/landingPage/activityText.astro
@@ -13,10 +13,11 @@
         Workshops
       </h2>
       <p>
-        We're not only able to show what a robot can do, we also offer the possibility
-        to show you how to program them. Depending on age and experience we offer
-        different workshops, tailored to every level and with room for specific educational purposes. 
-        Make the robot move, dance and observe its surroundings!
+        We're not only able to show what a robot can do, we also offer the
+        possibility to show you how to program them. Depending on age and
+        experience we offer different workshops, tailored to every level and
+        with room for specific educational purposes. Make the robot move, dance
+        and observe its surroundings!
       </p>
 
       <div class="pb-8"></div>
@@ -25,10 +26,11 @@
         Lectures
       </h2>
       <p>
-        Are you interested in our techniques applied to perform autonomous football,
-        the relevancy of our work and the current landscape of AI and robotics? 
-        Or maybe you are curious about what could be next at the cutting edge of our field?
-        We are happy to give lectures and presentations, both on location and inside our Intelligent Robotics Lab.
+        Are you interested in our techniques applied to perform autonomous
+        football, the relevancy of our work and the current landscape of AI and
+        robotics? Or maybe you are curious about what could be next at the
+        cutting edge of our field? We are happy to give lectures and
+        presentations, both on location and inside our Intelligent Robotics Lab.
       </p>
 
       <div class="pb-8"></div>
@@ -37,10 +39,10 @@
         Competition
       </h2>
       <p>
-        Of course there is no football without a little competition, which is why
-        we also compete in the yearly RoboCup SPL (Standard Platform League) and 
-        regional competitions throughout Europe. Our robots are put to the test by 
-        playing matches against teams from all over the world.
+        Of course there is no football without a little competition, which is
+        why we also compete in the yearly RoboCup SPL (Standard Platform League)
+        and regional competitions throughout Europe. Our robots are put to the
+        test by playing matches against teams from all over the world.
       </p>
 
       <div class="pb-20"></div>
