--- a/src/components/docs/pagination.astro
+++ b/src/components/docs/pagination.astro
@@ -20,7 +20,7 @@ const isRtl = getIsRtlFromUrl(pathname);
 ---
 
 <div
-  class="mt-16 mb-8 flex flex-row items-center justify-between px-4 pt-4 font-medium text-dnt-orange-800 dark:text-dnt-orange-200 lg:px-8"
+  class="mb-8 mt-16 flex flex-row items-center justify-between px-4 pt-4 font-medium text-dnt-orange-800 dark:text-dnt-orange-200 lg:px-8"
 >
   <div>
     {
