adds in the files for a sponsoring page

--- a/src/components/navigation/navbar.astro
+++ b/src/components/navigation/navbar.astro
@@ -35,6 +35,11 @@ const navbarLinks: Array<{
     label: "Publications",
   },
   {
+    pattern: new RegExp("^/sponsoring"),
+    href: "/sponsoring",
+    label: "Sponsoring",
+  },
+  {
     pattern: new RegExp("^/en"),
     href: "/en/introduction",
     position: "left",
