--- a/src/components/sponsoringPage/introText.astro
+++ b/src/components/sponsoringPage/introText.astro
@@ -2,22 +2,24 @@
 ---
 
 <div
-  class="lg:items-begin mx-8 my-16 flex flex-col items-center justify-center gap-8 lg:flex-row"
+  class="lg:items-begin my-16 flex flex-col items-center justify-center lg:flex-row"
 >
-  <div class="max-w-7xl flex-col lg:max-w-md">
+  <div class=" max-w-4xl flex-col">
     <h1
-      class="mb-2 text-4xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
+      class="mb-2 text-center text-5xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
     >
-      Meet the team
+      Sponsor us
     </h1>
     <h2>
-      With a team of bachelor and master students from the University of
-      Amsterdam, we program robots to play football by themselves. With these
-      robots we compete in competitions around the whole world. By programming
-      them in advance, we let them see with their cameras, hear with their
-      microphones and communicate with their wifi capabilities to remove the
-      need for a human controller.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Fusce pretium velit diam, nec semper lorem scelerisque vel.
+      Aenean luctus vehicula erat, at dictum quam accumsan sed.
+      Aliquam vestibulum, elit quis eleifend volutpat, velit orci mattis nunc,
+      eu lacinia lacus nibh eu lorem. Nullam euismod lobortis venenatis.
+      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+      cubilia curae; Quisque id volutpat lacus. Duis tincidunt
+      odio ut arcu aliquet faucibus.
     </h2>
   </div>
-  <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" />
+  <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
 </div>
